<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012-2013 Trento RISE
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
         http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either   express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="top"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="top"
            android:padding="10dp" 
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/recur_name"/>
                
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ToggleButton
                    android:id="@+id/myitinerary_toggle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/monitor_off"
                    android:focusable="false"
                    android:textOn=""
                    android:textOff="" />

                <TextView
                    android:id="@+id/myitinerary_monitor_label"
                    style="@style/label_jp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monitor_on" />

            </LinearLayout>

<!--             <CheckBox -->
<!--                 android:id="@+id/recur_monitor" -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:text="@string/recur_monitor" /> -->
    
            <TextView
                    android:id="@+id/plannew_location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plan_location" 
                    style="@style/label_jp"
                    />

            <LinearLayout
                android:id="@+id/plannew_from_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                    android:paddingTop="10dp" 
                android:gravity="bottom"
                android:orientation="horizontal" >

                <AutoCompleteTextView
                    android:textColor="@android:color/primary_text_light"
                    android:id="@+id/plannew_from_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/plan_from" />

                <!-- <EditText -->
                <!-- android:id="@+id/plannew_from_text" -->
                <!-- android:layout_width="0dp" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_weight="1" -->
                <!-- android:ems="10" -->
                <!-- android:focusableInTouchMode="false" -->
                <!-- android:hint="@string/plan_from" -->
                <!-- android:singleLine="true" > -->
                <!-- </EditText> -->


                <!-- <ImageButton -->
                <!-- android:id="@+id/plannew_from_btn" -->
                <!-- android:layout_width="wrap_content" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_gravity="center_vertical" -->
                <!-- android:background="@android:color/transparent" -->
                <!-- android:contentDescription="@string/plan_from" -->
                <!-- android:src="@drawable/ic_position" /> -->

                <ImageButton
                    android:id="@+id/plannew_from_opt"
                        android:layout_width="41dp"
                        android:layout_height="41dp"  
                    android:contentDescription="@string/plan_from"
                    android:src="@drawable/ic_position" />

                <ImageButton
                    android:id="@+id/plannew_from_star"
                        android:layout_width="41dp"
                        android:layout_height="41dp"  
                    android:contentDescription="@string/plan_from"
                    android:src="@drawable/ic_star" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/plannew_to_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                    android:paddingTop="10dp" 
                android:focusableInTouchMode="false"
                android:gravity="bottom" >

                <AutoCompleteTextView
                    android:textColor="@android:color/primary_text_light"
                    android:id="@+id/plannew_to_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/plan_to" />

                <!-- <EditText -->
                <!-- android:id="@+id/plannew_to_text" -->
                <!-- android:layout_width="0dp" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_weight="1" -->
                <!-- android:ems="10" -->
                <!-- android:focusableInTouchMode="false" -->
                <!-- android:hint="@string/plan_to" -->
                <!-- android:singleLine="true" > -->
                <!-- </EditText> -->


                <!-- <ImageButton -->
                <!-- android:id="@+id/plannew_to_map" -->
                <!-- android:layout_width="wrap_content" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_gravity="center_vertical" -->
                <!-- android:background="@android:color/transparent" -->
                <!-- android:contentDescription="@string/plan_to" -->
                <!-- android:src="@drawable/ic_position" /> -->


                <!-- <ImageButton -->
                <!-- android:id="@+id/plannew_to_btn" -->
                <!-- android:layout_width="wrap_content" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_gravity="center_vertical" -->
                <!-- android:background="@android:color/transparent" -->
                <!-- android:contentDescription="@string/plan_to" -->
                <!-- android:src="@drawable/ic_position" /> -->

                 <ImageButton
                    android:id="@+id/plannew_to_opt"
                        android:layout_width="41dp"
                        android:layout_height="41dp"  
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/plan_from"
                    android:src="@drawable/ic_position" />

                 <ImageButton
                    android:id="@+id/plannew_to_star"
                        android:layout_width="41dp"
                        android:layout_height="41dp"  
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/plan_to"
                    android:src="@drawable/ic_star" />
            </LinearLayout>

            <TextView
                android:id="@+id/TextView01"
                style="@style/label_jp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:paddingTop="10dp" 
                android:text="@string/plan_timing" />

            <LinearLayout
                android:id="@+id/plannew_when_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_marginBottom="10dp" >

                <EditText
                    android:id="@+id/recur_time_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:hint="@string/recur_time_from"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/recur_time_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:hint="@string/recur_time_to"
                    android:inputType="time" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/plannew_when_date_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_marginBottom="10dp" >

                <EditText
                    android:id="@+id/recur_date_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:hint="@string/recur_date_from"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/recur_date_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:hint="@string/recur_date_to"
                    android:inputType="time" />

                <CheckBox
                    android:id="@+id/always_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/always" />

            </LinearLayout>

            <TextView
                android:id="@+id/plannew_schedule_label"
                style="@style/label_jp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/plan_schedule" />
            
            <Spinner
                android:id="@+id/recurrence"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_marginBottom="10dp" />
                
            
            <!-- <Spinner -->
            <!-- android:id="@+id/plannew_prefs" -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:layout_below="@id/plannew_when_ll" -->
            <!-- android:layout_marginBottom="10dp" /> -->

            <LinearLayout
                android:id="@+id/plannew_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plan_custom_prefs"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <ToggleButton
                    android:id="@+id/plannew_options_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:checked="false"
                    android:textOff="@string/plan_custom_prefs_off"
                    android:textOn="@string/plan_custom_prefs_on" />
            </LinearLayout>

            <include
                android:id="@+id/plannew_userprefs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/userprefs" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button
        android:id="@+id/recurr_save"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/recurr_save" />
<!--         <Button -->
<!--         android:id="@+id/recurr_delete" -->
<!--         android:layout_width="0dp" -->
<!--         android:layout_weight="1" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/recurr_delete" /> -->
        
    </LinearLayout>
    <!-- android:layout_alignParentBottom="true" -->

</LinearLayout>
